Verison 2.0 - Enable Async Call Support - Support for React Native

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,16 +2,6 @@
     package="siminov.web"
     android:versionCode="1"
     android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-    </application>
+    <uses-sdk android:minSdkVersion="7" />
 
 </manifest>
